--- a/Assets/css/style.css
+++ b/Assets/css/style.css
@@ -120,3 +120,55 @@ html,body{
 .volumeBar .progressBar {
     width: 125px;
 }
+/* /////////////////////////////////////////////////////////////////////////////////////////// */
+/* ////////////////////////////////////////////////////////////////////////////////////////////////////// */
+#topContainer {
+    min-height: 100%;
+    width: 100%;
+}
+
+#NavbarContainer {
+    background-color: rgb(19, 1, 39);
+    width: 220px;
+    height: 100vh;
+    position: fixed;
+    top: 0;
+    left: 0;
+}
+.Navbar{
+    padding: 25px;
+    display: flex;
+    flex-direction: column;
+    -ms-flex-direction: column;
+}
+.logo img {
+    width: 60px;
+}
+.logo {
+    margin-bottom: 15px;
+}
+.Navbar .group{
+    border-top: 1px solid #ffe2ff;
+    padding: 10px 0;
+}
+.navItem{
+    padding: 10px 0;
+    font-size: 14px;
+    font-weight: 700;
+    display: block;
+    letter-spacing: 1px;
+    position: relative;
+}
+.navItemLink{
+    color: #ffe2ff;
+    text-decoration: none;
+}
+.navItemLink:hover {
+    color: #E9A9AC;
+}
+.navItemLink .icon {
+    position: absolute;
+    right: 0;
+    top: 5px;
+    width: 25px;
+}
