--- a/Assets/css/style.css
+++ b/Assets/css/style.css
@@ -1,15 +1,21 @@
 *{
     font-family: "Helvetica Neue",Helvetica,Arial,sans-serif; 
-    color: #ffe2ff;
+    color: #fff;
+    letter-spacing: 1px;
 }
 html,body{
     padding: 0;
     margin: 0;
     height: 100%;
 }
+body {
+    background-color: #181818;
+    font-size: 14px;
+    min-width: 720px;
+}
 #nowPlayingBarContainer{
     width: 100%;
-    background-color: #0F0B24;
+    background-color: #282828;
     bottom: 0;
     position: fixed;
     min-width: 620px;
@@ -62,7 +68,7 @@ html,body{
     cursor: pointer;
 }
 .progressTime{
-    color: #ffe2ff;
+    color: #a0a0a0;
     font-size: 11px;
     min-width: 40px;
     text-align: center;
@@ -77,13 +83,13 @@ html,body{
     cursor: pointer;
 }
 .progressBarBG{
-    background-color: #ffe2ff;
+    background-color: #404040;
     height: 4px;
     width: 100%;
     border-radius: 2px;
 }
 .progress{
-    background-color: #E9A9AC;
+    background-color: #a0a0a0;
     height: 4px;
     width: 0;
     border-radius: 2px;
@@ -109,7 +115,7 @@ html,body{
 }
 #nowPlayingLeft .trackInfo .ArtistName span {
     font-size: 12px;
-    color: #E9A9AC;
+    color: #a0a0a0;
 }
 /* //////////////////////////////////////////////////////////////////////// */
 .volumeBar {
@@ -128,7 +134,7 @@ html,body{
 }
 
 #NavbarContainer {
-    background-color: rgb(19, 1, 39);
+    background-color: #000;
     width: 220px;
     height: 100vh;
     position: fixed;
@@ -148,7 +154,7 @@ html,body{
     margin-bottom: 15px;
 }
 .Navbar .group{
-    border-top: 1px solid #ffe2ff;
+    border-top: 1px solid #a0a0a0;
     padding: 10px 0;
 }
 .navItem{
@@ -160,11 +166,11 @@ html,body{
     position: relative;
 }
 .navItemLink{
-    color: #ffe2ff;
+    color: #a0a0a0;
     text-decoration: none;
 }
 .navItemLink:hover {
-    color: #E9A9AC;
+    color: #ffffff;
 }
 .navItemLink .icon {
     position: absolute;
@@ -172,3 +178,143 @@ html,body{
     top: 5px;
     width: 25px;
 }
+/* /////////////////////////////////////////////////////////////////// */
+#mainViewContainer{
+    margin-left: 220px;
+    padding-bottom: 90px;
+    width: calc(100% - 220px);
+}
+#mainContent{
+    padding: 0 20px;
+}
+/* /////////////////////////////////////////////////////////////////////////////// */
+.pageHeadingBig {
+    padding: 20px;
+    text-align: center;
+}
+/* /////////////////////////////////////////////////////////////////// */
+.gridViewContain .gridViewItem {
+    display: inline-block;
+    margin-right: 20px;
+    width: 29%;
+    max-width: 200px;
+    min-width: 150px;
+    margin-bottom: 20px;
+}
+.gridViewItem img{
+    width: 100%;
+}
+.gridViewInfo{
+    font-weight: 300;
+    text-align: center;
+    padding: 5px 0;
+    text-overflow: ellipsis;
+    overflow: hidden;
+    white-space: nowrap;
+}
+.gridViewItem a{
+    text-decoration: none;
+}
+/* ////////////////////////////////////////////////////////////////////////////////////
+///////////////////////////////////////////////////////////////////////////////////
+/////////////////////////////////////////////////////////////////////////////////// */
+/* ???????????????????????????----ALBUM---?????????????????????????????????????????????????????? */
+
+.EntityInfo {
+    padding: 40px 0 10px 0;
+    display: inline-block;
+    width: 100%;
+}
+.EntityInfo .leftSection {
+    width: 30%;
+    float: left;
+    max-width: 250px;
+}
+.EntityInfo .leftSection img {
+    width: 100%;
+}
+.EntityInfo .rightSection {
+    width: 70%;
+    float: left;
+    padding: 5px 10px 5px 40px;
+    box-sizing: border-box;
+}
+.EntityInfo .rightSection h2 {
+    margin-top: 0px;
+}
+.EntityInfo .rightSection p {
+    color: #939393;
+}
+/* ////////////////////////////////////////////////////////////////////////////////////
+///////////////////////////////////////////////////////////////////////////////////
+/////////////////////////////////////////////////////////////////////////////////// */
+/* ???????????????????????????----ALBUM SONGS LIST---?????????????????????????????????????????????????????? */
+
+.trackList{
+    padding: 0;
+}
+.trackListRow{
+    height: 40px;
+    padding: 15px 10px;
+    list-style: none;
+}
+.trackListRow span {
+    color: #939393;
+    font-weight: 200;
+}
+.trackListRow:hover {
+    background-color: #282828;
+}
+.trackListRow .TrackCount {
+    width: 8%;
+    float: left;
+}
+.trackListRow .TrackCount img{
+    width: 20px;
+    visibility: hidden;
+    position: absolute;
+    cursor: pointer;
+}
+.trackListRow:hover .TrackCount img {
+    visibility: visible;
+}
+.trackListRow .TrackCount span {
+    visibility: visible;
+}
+.trackListRow:hover .TrackCount span {
+    visibility: hidden;
+}
+.trackListRow .Trackinfo{
+    width: 75%;
+    float: left;
+}
+.trackListRow .Trackinfo span{
+    display: block;
+}
+.trackListRow .Trackinfo .trackName {
+    color: #fff;
+    margin-bottom: 7px;
+}
+.trackListRow .trackOption {
+    width: 5%;
+    float: left;
+    text-align: left;
+}
+.trackListRow .trackOption img{
+    width: 15px;
+    visibility: hidden ;
+}
+.trackListRow:hover .trackOption img {
+    visibility: visible;
+}
+.trackListRow .trackDuration {
+    width: 12px;
+    float: left;
+    text-align: right;
+}
+
+
+
+
+
+
