--- a/Assets/css/style.css
+++ b/Assets/css/style.css
@@ -312,9 +312,37 @@ body {
     float: left;
     text-align: right;
 }
+/* ////////////////////////ARTIST PAGE/////////////////////////// */
+.artistInfo{
+    text-align: center;
+}
+.button {
+    color: #fff;
+    cursor: pointer;
+    margin-bottom: 10px;
+    background-color: transparent;
+    font-weight: 500;
+    letter-spacing: 2px;
+    border: 2px solid #fff;
+    border-radius: 500px;
+    padding: 15px;
+    min-width: 130px;
+}
+.button.green {
+    background-color: #2ebd59;
+    border: #2ebd59;
+}
+.borderBottom{
+    border-bottom: 1px solid #939393;
+    margin-bottom: 20px;
+}
 
-
-
-
-
+.trackListContainer h2,
+.gridViewContain h2 {
+    text-align: center;    
+}
+/* ////////////////////////ARTIST NAME, ALBUM COVER, SONG ON PLAYINGBAR /////////////////////////// */
+[role = "link"]{
+    cursor: pointer;
+}
 
